# barista

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .semgrepignore  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  trivy.yaml
crates/barista-bench/: Cargo.toml  README.md
crates/barista-bench/schema/: manifest.schema.json  results.schema.json
crates/barista-bench/src/: error.rs  lib.rs  manifest.rs  results.rs
crates/barista-bench/tests/: corpus_manifests.rs  manifest_roundtrip.rs  results_schema.rs
crates/barista-bench/tests/fixtures/: manifest-bad-schema.toml  manifest-empty-metrics.toml  manifest-microbench.toml  manifest-missing-id.toml  manifest-valid.toml  results-bad-tier.json  results-bad-timestamp.json  results-missing-summary.json  results-valid.json
crates/barista-cache/: Cargo.toml  README.md
crates/barista-cache/src/: cas.rs  checksum.rs  fetch.rs  gc.rs  index.rs  journal.rs  lib.rs  lock.rs  m2.rs  recovery.rs  source.rs
crates/barista-cache/tests/: concurrent.rs  redteam_cache_poison.rs  roastery_integration.rs  roastery_push.rs
crates/barista-cache/tests/common/: mod.rs  roastery_harness.rs
crates/barista-cli/: Cargo.toml
crates/barista-cli/src/: cli.rs  lib.rs  main.rs  project.rs
crates/barista-cli/src/action_graph/: mod.rs
crates/barista-cli/src/cmd/: ci_repro.rs  dial_in.rs  grind.rs  maven_vocab.rs  mod.rs  no_daemon.rs  pour.rs  (+6 more)
crates/barista-cli/tests/: cli_ci_flag.rs  cli_parser.rs  cli_summary_snapshots.rs  cmd_dial_in.rs  cmd_grind.rs  cmd_lifecycle.rs  cmd_maven_bundle.rs  cmd_maven_vocab.rs  cmd_no_daemon.rs  cmd_pour.rs  cmd_pull.rs  cmd_pull_full_fetch.rs  cmd_shot.rs  cmd_tap.rs  cmd_verify.rs  cmd_verify_ci_reproducibility.rs  cmd_verify_reactor.rs  cmd_windows_smoke.rs  cmd_wrapper.rs  ndjson_stream_e2e.rs  output_renderer.rs  output_schema_validation.rs  output_shapes_complete.rs  output_snapshots.rs  renderer_schema_e2e.rs
crates/barista-config/: Cargo.toml
crates/barista-config/benches/: load.rs
crates/barista-config/examples/: survey-extensions.rs
crates/barista-config/src/: barista_toml.rs  dot_mvn.rs  lib.rs  schema.rs  settings_xml.rs  sources.rs
crates/barista-config/tests/: effective.rs
crates/barista-coords/: Cargo.toml
crates/barista-coords/benches/: parse.rs
crates/barista-coords/src/: lib.rs
crates/barista-ipc/: Cargo.toml  build.rs
crates/barista-ipc/src/: lib.rs  proto.rs
crates/barista-ipc/tests/: auth_perms_pipe.rs  auth_perms_uds.rs  auth_zeroize.rs  conformance.rs  conformance_pipe.rs  crash_detection.rs  crash_recovery_conformance.rs  mux_basic.rs  mux_cancel.rs  mux_concurrent.rs  mux_drop_cancels.rs  proto_smoke.rs  transport_framing.rs  transport_pipe.rs  transport_uds.rs
crates/barista-lockfile/: Cargo.toml
crates/barista-lockfile/examples/: export-schema.rs
crates/barista-lockfile/src/: diff.rs  lib.rs  mode.rs  schema.rs  signature.rs
crates/barista-lockfile/tests/: redteam_lockfile_drift.rs  roundtrip.rs  scenarios.rs
crates/barista-netanalyze/: Cargo.toml
crates/barista-netanalyze/src/: error.rs  finding.rs  lib.rs  pipeline.rs
crates/barista-netanalyze/tests/: analyzer_smoke.rs
crates/barista-netcap/: Cargo.toml  README.md
crates/barista-netcap/src/: ca.rs  error.rs  har.rs  lib.rs  session.rs
crates/barista-netcap/tests/: baseline_captures_integration.rs  ca_setup.rs  session_lifecycle.rs  session_smoke.rs
crates/barista-pom/: Cargo.toml
crates/barista-pom/benches/: effective.rs  parse.rs
crates/barista-pom/src/: blob.rs  effective.rs  lib.rs  profile.rs  raw.rs
crates/barista-pom/tests/: corpus.rs  golden.rs
crates/barista-resolver/: Cargo.toml
crates/barista-resolver/benches/: walker.rs
crates/barista-resolver/examples/: skip_rate_report.rs  spike-bfs.out  spike-bfs.rs  spike-corpus.rs
crates/barista-resolver/fuzz/: Cargo.toml  rust-toolchain.toml
crates/barista-resolver/src/: lib.rs  oreq.rs  skipper.rs  snapshot.rs  source.rs  strict.rs  strict_format.rs  version_spec.rs  walker.rs
crates/barista-resolver/tests/: dependency_tree.rs  fixture_source_smoke.rs  oreq_integration.rs  strict.rs  walker_skipper.rs
crates/barista-roastery-client/: Cargo.toml  README.md
crates/barista-roastery-client/src/: client.rs  config.rs  digest.rs  error.rs  lib.rs  tls.rs  types.rs
crates/barista-roastery-client/tests/: container_roundtrip.rs  coords_header.rs  roastery_speedup.rs  round_trip.rs
crates/barista-tap/: Cargo.toml
crates/barista-tap/src/: lib.rs
crates/barista-tap/tests/: probe.rs
crates/barista-telemetry/: Cargo.toml
crates/barista-telemetry/src/: lib.rs  tracing.rs  transport.rs
crates/barista-telemetry/tests/: event_shapes.rs  tracing_human.rs  tracing_json.rs  transport_stub.rs  zero_network.rs
crates/barista-test-fixtures/: Cargo.toml
crates/barista-test-fixtures/data/: corpus-100.toml  version-cases.toml
crates/barista-test-fixtures/scripts/: parity-check.README.md  parity-check.sh  snapshot-corpus-metadata.sh
crates/barista-test-fixtures/src/: lib.rs
crates/barista-version/: Cargo.toml
crates/barista-version/benches/: compare.rs
crates/barista-version/src/: lib.rs
crates/barista-version/tests/: comparison.rs
roastery/: Cargo.toml  Dockerfile  README.md  build.rs
roastery/proto/: REVISIONS.txt
roastery/scripts/: build-image.sh
roastery/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
roastery/src/auth/: bearer.rs  layer.rs  mod.rs  mtls.rs
roastery/src/ops/: health.rs  metrics.rs  mod.rs  version.rs
roastery/src/proto/: barista.rs  mod.rs  reapi.rs
roastery/src/storage/: fs.rs  gcs.rs  mod.rs  s3.rs
roastery/src/upstream/: coords.rs  error.rs  fetch.rs  mod.rs
roastery/tests/: auth.rs  ops.rs  proto_barista.rs  reapi.rs  smoke.rs  upstream.rs
roastery/tests/common/: certs.rs  mod.rs
roastery/tests/e2e/: kind-config.yaml  kind.sh
xtask/: Cargo.toml
xtask/src/: findings.rs  lib.rs  main.rs  security.rs
xtask/tests/: findings.rs
(+433 files in other folders)
