[package]
name = "roastery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The roastery remote artifact cache server."
publish = false
# `build.rs` records build-time identity (git short SHA, build date,
# rustc version) for the `/version` ops endpoint. Each lookup degrades
# gracefully to `null` if it fails — a clean tarball install with no
# git, or a `rustc -V` that can't run, must never fail the build.
build = "build.rs"

[[bin]]
name = "roastery"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# why axum: `axum` 0.8 is the de facto Rust HTTP framework; it sits on
# `hyper` + `tower` and composes cleanly with the `tonic` gRPC stack
# the resolver/REAPI handler will mount in M5.1 T4. Picking it over
# raw `hyper` here lets later tasks add routes, layers, and a gRPC
# `Service` without retrofitting an executor or a router.
axum = "0.8"
# Async runtime. `signal` is required for the graceful-shutdown path
# (Ctrl-C + SIGTERM); `net` for the TCP listener; `fs` + `io-util`
# back the content-addressed storage layer (`tokio::fs` for atomic
# rename + tempfile staging, `AsyncReadExt`/`AsyncWriteExt` for the
# streaming put/get codepaths); `macros` + `rt-multi-thread` for
# `#[tokio::main]` and the worker pool.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util"] }
# `tower` provides the `Service` / `Layer` traits axum middleware
# slots into; pinning it here surfaces the version axum 0.8 expects
# and lines up with the version already in the workspace lockfile.
tower = "0.5"
# `tower-http` carries the `TraceLayer` used to attach a `tracing`
# span per request — the minimum observability hook the scaffold
# needs before M5.1 T7 wires `/metrics` and a structured access log.
tower-http = { version = "0.6", features = ["trace"] }
# `hyper` 1.x is axum 0.8's underlying HTTP implementation. The
# `http1` + `http2` features make the negotiation surface explicit;
# `server` brings in the connection-builder types `hyper-util` wraps.
hyper = { version = "1", features = ["http1", "http2", "server"] }
# `hyper-util` ships the `server::conn::auto::Builder` we use to
# accept both HTTP/1.1 and HTTP/2 on the same listener. Over plain
# TCP this stays HTTP/1.1 in practice; HTTP/2 negotiation kicks in
# once TLS + ALPN land in M5.1 T5. The codepath is reserved here so
# that work is a layering change, not a rewrite.
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
# Structured logging facade + subscriber. `env-filter` lets operators
# tune verbosity with `RUST_LOG`; `fmt` is the default human-readable
# formatter the scaffold uses until M5.1 T7 introduces a structured
# JSON formatter for production deployments.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Typed error enum for the server. `thiserror` 2 is the major already
# in use elsewhere in the workspace; this keeps the dep graph narrow.
thiserror = "2"
# `url::Url` types the (currently unused) upstream-on-miss endpoint
# in `ServerConfig` so M5.1 T6 has a parsed value to plug into.
# `serde` is intentionally not pulled in by the scaffold — later
# milestones can add it (with the `url/serde` feature) when they
# need to serialize config or wire JSON request bodies.
url = "2"
# `sha2` is the SHA-256 implementation backing every CAS digest. The
# storage layer hashes blob bytes as they stream through `put` so the
# server never has to buffer a full artifact in memory just to verify
# the digest the caller claimed. SHA-256 is the digest function the
# REAPI gRPC surface (M5.1 T4) negotiates by default and the one the
# barista-protocol handler (M5.1 T3) commits to in its URL scheme.
sha2 = "0.10"
# `tempfile::NamedTempFile` powers the atomic-write path for the
# filesystem CAS backend: write to `<root>/tmp/<random>.tmp`, hash as
# bytes flow, then `persist` (rename) into the final
# `<root>/cas/<2>/<62>` location. The crate's `Drop` impl deletes the
# temp file if the put aborts (digest mismatch, I/O error, panic) so
# we never leak partial blobs into the cache.
tempfile = "3"
# `hex` encodes/decodes SHA-256 digests as the 64-char lowercase hex
# strings the CAS uses for both on-disk filenames and the public URL
# component the protocol handlers will key off. Tiny crate, no
# transitive deps; cheaper than reinventing the parse loop.
hex = "0.4"
# `async-trait` desugars `async fn` in the public `Cas` trait. Native
# async-fn-in-trait is stable on `edition = "2024"`, but
# `Box<dyn Cas>` (used by `AppState` and tests that want a heterogenous
# backend) still requires `async-trait` because the trait must be
# object-safe.
async-trait = "0.1"
# `serde` + `serde_json` shape the JSON request/response bodies the
# barista-protocol handler accepts and emits (the `cas/missing`
# batch-presence endpoint, the `capabilities` payload, the structured
# error body). axum already pulls `serde_json` in transitively for
# its `Json` extractor; declaring it explicitly here documents the
# direct dependency so a future axum bump can't silently drop it.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `tokio-util`'s `io::ReaderStream` adapts the `AsyncRead` returned by
# `Cas::get` into a `Stream<Item = io::Result<Bytes>>` that
# `axum::body::Body::from_stream` consumes — the streaming GET
# codepath never has to buffer a full blob in memory.
tokio-util = { version = "0.7", features = ["io"] }
# `bytes::Bytes` is the chunk type axum's body stream yields and the
# item type `StreamReader` expects on the put codepath. Already pulled
# in transitively by `axum`; declared here so the put-body adapter
# can name the type directly.
bytes = "1"
# `futures-util` provides the `Stream` trait + `TryStreamExt` we use
# to map axum's body errors to `io::Error` before feeding the chunks
# to `tokio_util::io::StreamReader`. Already in the transitive graph
# via axum/tower; declared here for the direct import.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# `prometheus` is the official Rust client library for the Prometheus
# text-exposition format. We use it for the `/metrics` ops endpoint:
# a global default registry plus a small set of typed metrics
# (`IntCounterVec`, `HistogramVec`, `Gauge`, build-info gauge).
#
# Alternatives considered: the newer `metrics` + `metrics-exporter-
# prometheus` pair is more idiomatic for greenfield Rust apps but ships
# a wider surface than the v0.1 metric set justifies (a facade, an
# exporter, recorder threads). The bare `prometheus` crate is
# self-contained, well-established, and the global default registry
# pattern is fine at the scope of one cache server. We can revisit if
# we ever need per-request scoped metrics.
#
# `default-features = false` drops the optional `protobuf` exposition
# feature — we only emit the text format `/metrics` serves.
prometheus = { version = "0.14", default-features = false }

[dev-dependencies]
# `reqwest` drives the integration tests. `rustls-tls` is the
# future-proof TLS backend (matches a later TLS-enablement task);
# `http2` makes the client willing to negotiate h2 once TLS is on. The
# `json` feature unlocks `RequestBuilder::json` + `Response::json` for
# the barista-protocol JSON payload tests; over plain TCP the
# connection stays HTTP/1.1.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# `serde_json::json!` builds the JSON request bodies the
# `proto_barista` integration tests send; same crate the library
# depends on so no extra graph cost.
serde_json = "1"
# `sha2` and `hex` are used by the integration tests to compute the
# canonical SHA-256 digest of a test blob before issuing a request,
# without going through the library's `Digest::of_bytes` helper (the
# tests deliberately spell out the round-trip path the library is
# verifying).
sha2 = "0.10"
hex = "0.4"
# `axum` lets the integration tests assemble a router by hand against
# the public sub-router constructor; same version the library depends
# on so the API is the one production uses.
axum = "0.8"

[lints]
workspace = true
