[package]
name = "roastery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The roastery remote artifact cache server."
publish = false
# `build.rs` records build-time identity (git short SHA, build date,
# rustc version) for the `/version` ops endpoint. Each lookup degrades
# gracefully to `null` if it fails — a clean tarball install with no
# git, or a `rustc -V` that can't run, must never fail the build.
build = "build.rs"

[[bin]]
name = "roastery"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# why axum: `axum` 0.8 is the de facto Rust HTTP framework; it sits on
# `hyper` + `tower` and composes cleanly with the `tonic` gRPC stack
# the resolver/REAPI handler will mount in M5.1 T4. Picking it over
# raw `hyper` here lets later tasks add routes, layers, and a gRPC
# `Service` without retrofitting an executor or a router.
axum = "0.8"
# Async runtime. `signal` is required for the graceful-shutdown path
# (Ctrl-C + SIGTERM); `net` for the TCP listener; `fs` + `io-util`
# back the content-addressed storage layer (`tokio::fs` for atomic
# rename + tempfile staging, `AsyncReadExt`/`AsyncWriteExt` for the
# streaming put/get codepaths); `macros` + `rt-multi-thread` for
# `#[tokio::main]` and the worker pool.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util"] }
# `tower` provides the `Service` / `Layer` traits axum middleware
# slots into; pinning it here surfaces the version axum 0.8 expects
# and lines up with the version already in the workspace lockfile.
tower = "0.5"
# `tower-http` carries the `TraceLayer` used to attach a `tracing`
# span per request — the minimum observability hook the scaffold
# needs before M5.1 T7 wires `/metrics` and a structured access log.
tower-http = { version = "0.6", features = ["trace"] }
# `hyper` 1.x is axum 0.8's underlying HTTP implementation. The
# `http1` + `http2` features make the negotiation surface explicit;
# `server` brings in the connection-builder types `hyper-util` wraps.
hyper = { version = "1", features = ["http1", "http2", "server"] }
# `hyper-util` ships the `server::conn::auto::Builder` we use to
# accept both HTTP/1.1 and HTTP/2 on the same listener. Over plain
# TCP this stays HTTP/1.1 in practice; HTTP/2 negotiation kicks in
# once TLS + ALPN land in M5.1 T5. The codepath is reserved here so
# that work is a layering change, not a rewrite.
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
# Structured logging facade + subscriber. `env-filter` lets operators
# tune verbosity with `RUST_LOG`; `fmt` is the default human-readable
# formatter the scaffold uses until M5.1 T7 introduces a structured
# JSON formatter for production deployments.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Typed error enum for the server. `thiserror` 2 is the major already
# in use elsewhere in the workspace; this keeps the dep graph narrow.
thiserror = "2"
# `url::Url` types the (currently unused) upstream-on-miss endpoint
# in `ServerConfig` so M5.1 T6 has a parsed value to plug into.
# `serde` is intentionally not pulled in by the scaffold — later
# milestones can add it (with the `url/serde` feature) when they
# need to serialize config or wire JSON request bodies.
url = "2"
# `sha2` is the SHA-256 implementation backing every CAS digest. The
# storage layer hashes blob bytes as they stream through `put` so the
# server never has to buffer a full artifact in memory just to verify
# the digest the caller claimed. SHA-256 is the digest function the
# REAPI gRPC surface (M5.1 T4) negotiates by default and the one the
# barista-protocol handler (M5.1 T3) commits to in its URL scheme.
sha2 = "0.10"
# `tempfile::NamedTempFile` powers the atomic-write path for the
# filesystem CAS backend: write to `<root>/tmp/<random>.tmp`, hash as
# bytes flow, then `persist` (rename) into the final
# `<root>/cas/<2>/<62>` location. The crate's `Drop` impl deletes the
# temp file if the put aborts (digest mismatch, I/O error, panic) so
# we never leak partial blobs into the cache.
tempfile = "3"
# `hex` encodes/decodes SHA-256 digests as the 64-char lowercase hex
# strings the CAS uses for both on-disk filenames and the public URL
# component the protocol handlers will key off. Tiny crate, no
# transitive deps; cheaper than reinventing the parse loop.
hex = "0.4"
# `async-trait` desugars `async fn` in the public `Cas` trait. Native
# async-fn-in-trait is stable on `edition = "2024"`, but
# `Box<dyn Cas>` (used by `AppState` and tests that want a heterogenous
# backend) still requires `async-trait` because the trait must be
# object-safe.
async-trait = "0.1"
# `serde` + `serde_json` shape the JSON request/response bodies the
# barista-protocol handler accepts and emits (the `cas/missing`
# batch-presence endpoint, the `capabilities` payload, the structured
# error body). axum already pulls `serde_json` in transitively for
# its `Json` extractor; declaring it explicitly here documents the
# direct dependency so a future axum bump can't silently drop it.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `tokio-util`'s `io::ReaderStream` adapts the `AsyncRead` returned by
# `Cas::get` into a `Stream<Item = io::Result<Bytes>>` that
# `axum::body::Body::from_stream` consumes — the streaming GET
# codepath never has to buffer a full blob in memory.
tokio-util = { version = "0.7", features = ["io"] }
# `bytes::Bytes` is the chunk type axum's body stream yields and the
# item type `StreamReader` expects on the put codepath. Already pulled
# in transitively by `axum`; declared here so the put-body adapter
# can name the type directly.
bytes = "1"
# `futures-util` provides the `Stream` trait + `TryStreamExt` we use
# to map axum's body errors to `io::Error` before feeding the chunks
# to `tokio_util::io::StreamReader`. Already in the transitive graph
# via axum/tower; declared here for the direct import.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# `rustls` 0.23 is the TLS stack the auth layer uses to terminate
# HTTPS connections in the server, including the optional mTLS
# client-certificate verification path. We pull it in directly
# (rather than transitively through `axum-server`) because the
# `WebPkiClientVerifier` builder + `CryptoProvider::install_default`
# call live on the `rustls` API surface.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
# `rustls-pemfile` parses the PEM cert/key/CA files supplied to the
# auth surface. Avoids hand-rolling PEM framing — the format has
# enough quirks (`-----BEGIN` line variants, base64 line wrapping,
# trailing whitespace) that a vetted parser is worth the dep.
rustls-pemfile = "2"
# `tokio-rustls` is the async glue rustls needs to run over a
# `tokio::net::TcpStream`. axum-server's TLS feature pulls this in
# too; declared here because the cert-extraction `Accept` wrapper
# names `tokio_rustls::server::TlsStream` directly.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
# `axum-server` exposes a `RustlsAcceptor` + `bind_rustls` helper
# that drives the TLS handshake before the hyper service kicks in.
# The `tls-rustls-no-provider` feature picks rustls but doesn't
# force a specific crypto provider — we install `ring` explicitly at
# server startup (the dep tree already carries ring via rustls
# itself).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# `x509-parser` reads the Subject Common Name / first URI SAN out of
# the client cert presented during the mTLS handshake. Pure Rust,
# MIT/Apache-2.0; small surface area compared to OpenSSL bindings.
x509-parser = "0.18"
# `subtle` provides `ConstantTimeEq` for the bearer-token comparison.
# Plaintext byte-by-byte equality leaks timing information that lets
# a network-adjacent attacker recover a token one character at a
# time. We compare SHA-256 hashes (fixed 32-byte length) so a
# constant-time compare is both correct and cheap.
subtle = "2"
# `prometheus` is the official Rust client library for the Prometheus
# text-exposition format. We use it for the `/metrics` ops endpoint:
# a global default registry plus a small set of typed metrics
# (`IntCounterVec`, `HistogramVec`, `Gauge`, build-info gauge).
#
# Alternatives considered: the newer `metrics` + `metrics-exporter-
# prometheus` pair is more idiomatic for greenfield Rust apps but ships
# a wider surface than the v0.1 metric set justifies (a facade, an
# exporter, recorder threads). The bare `prometheus` crate is
# self-contained, well-established, and the global default registry
# pattern is fine at the scope of one cache server. We can revisit if
# we ever need per-request scoped metrics.
#
# `default-features = false` drops the optional `protobuf` exposition
# feature — we only emit the text format `/metrics` serves.
prometheus = { version = "0.14", default-features = false }
# `reqwest` is the HTTP client the upstream-on-miss fetcher uses to
# pull missing artifacts from Maven Central (or any configured
# upstream repository). Feature picks:
#
# - `rustls-tls-manual-roots`: matches the rustls crypto provider
#   (`ring`) the auth/TLS surface already installs at startup — we
#   don't want two crypto stacks linked into the same binary.
#   `manual-roots` keeps the linked size down by deferring root cert
#   loading to whichever provider we install; the auth layer is the
#   one that wires the system roots in via rustls-native-certs (when
#   we add that — for v0.1 we rely on what the platform provider
#   already trusts).
# - `stream`: required to access `Response::bytes_stream`, which the
#   fetcher hands to `tokio_util::io::StreamReader` so the response
#   body flows straight into `Cas::put` without buffering.
# - `http2`: parity with the server-side ALPN advertisement; lets the
#   client negotiate h2 with any upstream that offers it.
# - `json`: dev-dep feature used by the integration tests; cheap to
#   keep on the production build since serde + serde_json are already
#   in the dep graph for the protocol handlers.
#
# `default-features = false` drops `native-tls` (which would pull
# OpenSSL into the dep graph for no benefit on top of rustls).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "stream", "http2", "json"] }
# `tonic` 0.14 is the gRPC stack backing the Bazel REAPI surface
# (Content-Addressable-Storage + Capabilities + ByteStream). It sits on
# the same `hyper` 1.x + `tower` 0.5 foundation `axum` already uses, so
# the generated gRPC services compose into the existing router as plain
# tower services rather than running on a second listener.
#
# Features (these match tonic's own default set — note tonic 0.14's
# default does NOT pull in `prost`; the prost codec is a separate
# `tonic-prost` crate, declared below):
#   - `router`    — the `tonic::service::Routes` builder we merge into
#                   the axum router.
#   - `codegen`   — `tonic::codegen` + `tonic::async_trait`, referenced
#                   by the generated service code in OUT_DIR.
#   - `transport` — the server runtime AND the client `Channel` the
#                   integration tests dial (transport => server + channel).
tonic = { version = "0.14", default-features = false, features = ["router", "codegen", "transport"] }
# In tonic 0.14 the prost codec lives in a separate crate (`tonic` core
# is codec-agnostic). `tonic-prost` carries the `ProstCodec` the
# generated `*.rs` bindings reference and re-exports the runtime glue.
tonic-prost = "0.14"
# `prost` is the protobuf runtime the generated REAPI message types are
# built on (`Message` derive, scalar/`bytes`/oneof support). Pinned to
# the 0.14 line `tonic-prost-build` 0.14 emits code for. (Note: the
# `barista-ipc` crate independently uses `prost` 0.13 for its hand-rolled
# IPC schema; Cargo links both majors side-by-side without conflict.)
prost = "0.14"
# `prost-types` supplies the Rust types for the `google.protobuf.*`
# well-known types (`Any`, `Duration`, `Timestamp`, `Empty`, …) the
# vendored REAPI/googleapis protos import. Declaring it lets the build
# script compile those imports against prost's bundled WKTs instead of
# vendoring `google/protobuf/*` into `proto/`.
prost-types = "0.14"
# `tokio-stream`'s `wrappers::ReceiverStream` adapts the bounded mpsc
# channel the ByteStream `Read` handler uses (a reader task fills it,
# the gRPC server-stream drains it) into the `Stream` tonic expects, so
# a large blob streams out chunk-by-chunk without buffering in memory.
tokio-stream = "0.1"

[build-dependencies]
# `tonic-prost-build` 0.14 drives the compile-time codegen: it feeds the
# vendored `.proto` files through `protoc` and emits prost message types
# + tonic service traits into `$OUT_DIR`, picked up via
# `tonic::include_proto!` from `src/proto/reapi.rs`. ADR-006 (Path B)
# chose local generation over adopting a pre-generated `*-apis` crate so
# the pinned proto revisions are the single source of truth.
tonic-prost-build = "0.14"
# `protoc-bin-vendored` ships a per-platform `protoc` binary plus its
# bundled `google/protobuf/*` well-known-type include directory. The
# build script points `PROTOC` at it (and adds its include path) so a
# clean `cargo build` needs NO system `protoc` — CI and contributors
# don't have to install the protobuf toolchain out of band. This is the
# vendored-protoc posture ADR-006's verification step asks for.
protoc-bin-vendored = "3"

[dev-dependencies]
# `reqwest` is re-declared in dev-dependencies as a no-op (the
# runtime version above carries every feature the tests need). Listed
# here for the convention that test-only deps appear in this section;
# Cargo unifies the two declarations.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "stream", "http2", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# `serde_json::json!` builds the JSON request bodies the
# `proto_barista` integration tests send; same crate the library
# depends on so no extra graph cost.
serde_json = "1"
# `sha2` and `hex` are used by the integration tests to compute the
# canonical SHA-256 digest of a test blob before issuing a request,
# without going through the library's `Digest::of_bytes` helper (the
# tests deliberately spell out the round-trip path the library is
# verifying).
sha2 = "0.10"
hex = "0.4"
# `axum` lets the integration tests assemble a router by hand against
# the public sub-router constructor; same version the library depends
# on so the API is the one production uses.
axum = "0.8"
# `rcgen` generates an ephemeral CA + server/client certificates per
# test run so the mTLS integration tests can drive the full
# handshake path end-to-end without shipping pinned PEM material
# in-repo. Dev-dep only — `rcgen` doesn't get linked into the
# production binary.
rcgen = "0.14"
# `rustls-pemfile` re-appears as a dev-dep so the test cert helpers
# can read back the rcgen-emitted PEM if they ever need to round-trip
# through the file system. (Today they hand DER straight to rustls.)
rustls-pemfile = "2"
# `rustls` is also pulled in directly for the integration tests so
# the test harness can construct a client `ClientConfig` with a
# pinned CA + optional client cert. Same version as the lib dep.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# `rustls-pki-types` types up `CertificateDer` and `PrivateKeyDer` —
# the byte-buffers `rustls` accepts as its on-the-wire material.
# Used by `tests/common/certs.rs` to bridge rcgen output into rustls
# `ServerConfig` / `ClientConfig` construction. Already in the dep
# graph transitively; declared here for the direct import.
rustls-pki-types = "1"
# `tonic` (with the client `transport`/`Channel`) is needed by the
# REAPI integration tests (`tests/reapi.rs`) to dial the in-process
# gRPC server with the generated clients. The library declares the same
# version; declared here so the test crate (a separate compilation
# unit) sees it directly. Cargo unifies the two declarations.
tonic = { version = "0.14", default-features = false, features = ["router", "codegen", "transport"] }
# `futures-util`'s `stream::iter` builds the client-streaming request
# the ByteStream `Write` test sends.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[lints]
workspace = true
